package KRPC;

message Request {
  required string service = 1;
  required string procedure = 2;
  repeated Argument arguments = 3;
}

message Argument {
  required uint32 position = 1;
  required bytes value = 2;
}

message Response {
  required double time = 1;
  optional string error = 2;
  optional bytes return_value = 3;
}

message Services {
  repeated Service services = 1;
}

message Service {
  required string name = 1;
  repeated Procedure procedures = 2;
}

message Procedure {
  required string name = 1;
  repeated Parameter parameters = 2;
  optional string return_type = 3;
  repeated string attributes = 4;
}

message Parameter {
  required string name = 1;
  required string type = 2;
  optional bytes default_argument = 3;
}

message Status {
  required string version = 1;
}
