package RPC;

message Request {
  required string service = 1;
  required string method = 2;
  optional bytes request = 3;
}

message Response {
  required double time = 1;
  required bool error = 2 [default = false];
  optional string error_message = 3;
  optional bytes response = 4;
}
